--- a/styles.css
+++ b/styles.css
@@ -651,6 +651,24 @@ h6 {
   .col-largest-12 {
     width: 100%; } }
 
+.section-title {
+  font-size: 35px;
+  font-size: 2.1875rem;
+  position: relative;
+  font-weight: 600;
+  text-align: center; }
+  .section-title::after {
+    content: "";
+    height: 2px;
+    height: 0.125rem;
+    top: 40px;
+    top: 2.5rem;
+    border-top: 3px solid #f19533;
+    border-top: 0.1875rem solid #f19533;
+    width: 12%;
+    position: absolute;
+    left: 44%; }
+
 .bg-primary {
   background-color: #ff971c; }
 
