--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -29,7 +29,15 @@ $colors: (
   txt-gray1: #b9b9b9,
   txt-gray2: #727272,
   txt-gray3: #acacac,
+  txt-gray4: #888888,
+  border-gray: #f1f1f1,
+  border-gray1: #ebebeb,
+  border-gray3: #ECECEC,
+  border-gray4: #e4e4e4,
+  bg-gray: #3e3e3e,
   bg-black: #101010,
+  bg-black2: #1c1c1c,
+  bg-light: #f5f5f5,
 );
 
 // === z-index === //
