--- a/scss/pages/_all.scss
+++ b/scss/pages/_all.scss
@@ -1,1 +1,12 @@
 @import 'home';
+@import 'slide-show';
+@import 'section-introduction';
+@import 'section-service';
+@import 'section-feature';
+@import 'section-portfolio';
+@import 'section-information';
+@import 'section-suspendisse';
+@import 'section-introduction-team';
+@import 'information-bottom';
+@import 'section-recent-blog';
+@import 'section-banner';
