--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -59,7 +59,7 @@
       }
       .dropdown {
         display: block;
-        z-index: 2;
+        z-index: 3;
       }
     }
     &.big-dropdown {
@@ -109,7 +109,7 @@
     &.have-cart {
       position: relative;
       .number {
-        @include pxRem(padding, 2 4);
+        @include pxRem(padding, 2 5);
         @include pxRem(top, 22);
         @include pxRem(font-size, 12);
         border-radius: 50%;
@@ -117,6 +117,14 @@
         background-color: map-get($colors, primary);
         color: map-get($colors, white);
         position: absolute;
+      }
+    }
+    &.have-search {
+      i {
+        cursor: pointer;
+        &:hover {
+          color: map-get($colors, primary);
+        }
       }
     }
   }
@@ -138,6 +146,14 @@
   .btn-toggle {
     display: none;
   }
+  &.fixed {
+    position: fixed;
+    background: white;
+    z-index: 5;
+    width: 100%;
+    top: 0;
+    transition: all 1s;
+  }
 }
 .search-box {
   @include pxRem(padding, 30 50 30 45);
@@ -146,6 +162,7 @@
   background-color: map-get($colors, white);
   right: 0;
   left: 0;
+  z-index: 2;
   .search-form {
     .search-input {
       @include pxRem(width, 1045);
