--- a/scss/pages/_information-bottom.scss
+++ b/scss/pages/_information-bottom.scss
@@ -53,6 +53,9 @@
         @include pxRem(padding-bottom, 65);
         height: auto;
       }
+      .item {
+        border-right: 0 !important;
+      }
     }
   }
 }
